# chisel-nix

./: .gitignore  flake.nix  readme.md
.github/scripts/: bump-ivy
.github/workflows/: checkfmt.yml  daily-bump.yml  main.yml
nix/: overlay.nix
nix/pkgs/: espresso.nix
overlays/: mill-flows.nix  mill-flowss.nix
overlays/mill-flows/: configure-mill-env.nix  configure-mill-env.sh  configure-mill-home.sh  fetch-mill-deps.nix  install-ivy-repo.sh  publish-mill-jar.nix  setup-mill-deps.sh
templates/: default.nix
templates/chisel/: .gitignore  .scalafmt.conf  build.mill  build.sc  common.mill  common.sc  flake.nix  trace.fst
templates/chisel/configs/: GCD.json  GCDFormal.json  GCDTestBench.json
templates/chisel/elaborator/src/: Elaborator.scala  GCD.scala  GCDFormal.scala  GCDTestBench.scala  Main.scala
templates/chisel/gcd/src/: GCD.scala  GCDFormal.scala  GCDTestBench.scala
templates/chisel/gcdemu/: Cargo.toml
templates/chisel/gcdemu/src/: dpi.rs  drive.rs  lib.rs  plusarg.rs
templates/chisel/nix/: overlay.nix
templates/chisel/nix/chisel/: default.nix  rtl.nix
templates/chisel/nix/dependencies/: default.nix  nvfetcher.toml
templates/chisel/nix/gcd/: default.nix  dpi-lib.nix  elaborate.nix  elaborator.nix  formal.nix  gcd.nix  jg-fpv.nix  mlirbc.nix  rtl.nix  vcs.nix  verilated-c-lib.nix  verilated.nix
templates/chisel/nix/locks/: chisel-ivys.nix
templates/chisel/nix/pkgs/: cds-fhs-env.nix  circt-full.nix  espresso.nix  mill-builder.nix  nvfetcher-source.nix  project-dependencies.nix  riscv-tests.nix  vcs-fhs-env.nix
(+15 files in other folders)
